# baby_weight_recorder

./: .firebaserc  .gitignore  .pre-commit-config.yaml  PROJECT_ROADMAP.html  PROJECT_ROADMAP.md  README.md  add-storage-permission.sh  deploy-frontend.sh  docker-compose.yml  firestore.indexes.json  firestore.rules  pyproject.toml
.cursor/rules/project/: RULE.md
.cursor/rules/python/: RULE.md
.cursor/rules/terraform/: RULE.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-frontend.yml  deploy-prod.yml  terraform-plan.yml
api/: Dockerfile
api/app/: __init__.py  config.py  dependencies.py  main.py
api/app/data/: __init__.py  who_weight_for_age.py
api/app/models/: __init__.py  baby.py  user.py  weight.py
api/app/repositories/: __init__.py  base.py  firestore.py  memory.py
api/app/routers/: __init__.py  babies.py  health.py  weights.py
api/app/services/: __init__.py  assessment.py  jwt.py
auth/: Dockerfile
auth/app/: __init__.py  config.py  dependencies.py  main.py
auth/app/models/: __init__.py  user.py
auth/app/repositories/: __init__.py  base.py  firestore.py  memory.py
auth/app/routers/: __init__.py  auth.py  jwks.py
auth/app/services/: __init__.py  invite.py  jwt.py  password.py  secrets.py
docs/: PROJECT_ROADMAP.html  PROJECT_ROADMAP.md  baby_weight_recorder-spec.html  baby_weight_recorder-spec.md
frontend/: README.md  index.html
frontend/css/: style.css
frontend/js/: api.js  auth.js  chart.js  main.js
kong/: Dockerfile  entrypoint-local.sh  entrypoint.sh  kong.yml  kong.yml.test
kong/scripts/: generate-kong-config.py  jwk-to-pem.sh  sync-jwks-keys.py  sync-jwks-keys.sh  sync-jwks-to-kong.sh  sync-jwks.sh
scripts/: add_caregiver.sh  batch_weight.py  create_baby.sh  example_weights.csv  list_members.sh  register_user.sh  smoke_test_dev.sh
spec/: baby_weight_recorder-spec.html  baby_weight_recorder-spec.md  gcp_cloud_run_嬰兒體重紀錄系統－技術規格書.md
terraform/: .gitkeep  main.tf  outputs.tf  tfplan  variables.tf  versions.tf
terraform/environments/: backend-dev.hcl  backend-prod.hcl  dev.tfvars.example  prod.tfvars.example
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/artifact-registry/: main.tf  outputs.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/firestore/: main.tf  outputs.tf  variables.tf
terraform/modules/kong-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/secret-manager/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc-connector/: main.tf
terraform/modules/workload-identity/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/api/: test_assessment.py  test_babies.py  test_health.py  test_weights.py
tests/auth/: test_auth.py  test_health.py  test_jwks.py  test_password.py  test_repositories.py
tests/integration/: README.md  test_auth_to_api.py  test_docker_compose.py  test_kong_gateway.py
